2001-08-20 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified configure.in.in to test for libqtreemap
	  test may not working on some/most systems
	
2001-08-18 Alexander Rawass <alexannika@users.sourceforge.net>

	* V1.7.8-devel
	* added kdirstat.spec (to build rpms)
	* released kdirstat-1.7.8-1.i386.rpm

2001-08-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* removed files q*{cpp,h} from cvs
	* removed doc/treemaps from cvs
	* modified configure.in and kdirstat/Makefile.am
	* QTreeMap is now in it's own cvs qtreemap.sourceforge.net

2001-08-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* QTreeMap can write data files for 'HypView',
	  a hyperbolic tree browser
	
2001-08-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* changed all size-functions from int to asize/float
	* qxmltreemap: if a node has got an empty attribute 'size',
	  the size is calculated recursively

	* new files & classes
	  qlistviewtreemapwindow.cpp
	  qlistviewtreemapwindow.h
	  qlistviewtreemaparea.cpp
	  qlistviewtreemap.h
	  qxmltreemapviewer.cpp

	* files q*treemap* are built as a library libqtreemap
	* new qxmltreemapviewer binary:
	  stand-alone QT/Xml Treemap Viewer
	* QTreeMap/QListViewTreeMapArea works fine with KProf

2001-08-09  Stefan Hundhammer  <sh@suse.de>

	* Added "credits" section in about box

2001-08-08  Stefan Hundhammer  <sh@suse.de>

	* Implemented iterator classes: KFileInfoIterator and
	  KFileInfoSortedIterator  
	* Added CREDITS file

2001-08-06  Stefan Hundhammer  <sh@suse.de>

	* Fixed segfaults due to bad dot entry cleanup (huh? ;-)  ) that
	  had caused core dumps after finishing reading small trees
	
2001-08-05 Alexander Rawass <alexannika@users.sourceforge.net>

	* compiler warnings removed
	* using List of Objects (instead List of KDirInfo)
	* Bug: regexps not working in xml-window
	       selection not working in xml-window
	* removed dependencies to KDirStat from QTreeMap
	